infra/istio-1-24-1/samples/helloworld/gateway-api/helloworld-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: helloworld
spec:
  parentRefs:
  - name: helloworld-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /book-store-price
    backendRefs:
    - name: helloworld
      port: 5000
