infra/istio-1-24-1/samples/helloworld/gateway-api/helloworld-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: helloworld
spec:
  parentRefs:
  - name: helloworld-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /book-store-price
    backendRefs:
    - name: helloworld-v1
      port: 5000
      weight: 90
    - name: helloworld-v2
      port: 5000
      weight: 10
